--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.2_translation-en-brahmali.json
@@ -272,7 +272,7 @@
   "pli-tv-pvr2.2:87.3": "when she is finished reviling, she commits an offense entailing confession. ",
   "pli-tv-pvr2.2:88.1": "When invited to a meal, refusing an invitation to eat more, and then eating fresh or cooked food, she commits two kinds of offenses: ",
   "pli-tv-pvr2.2:88.2": "when receiving with the intention to eat, she commits an offense of wrong conduct; ",
-  "pli-tv-pvr2.2:88.3": "for every mouthful, she commits an offense entailing confession. ",
+  "pli-tv-pvr2.2:88.3": "for every mouthful swallowed, she commits an offense entailing confession. ",
   "pli-tv-pvr2.2:89.1": "When keeping a family to herself, she commits two kinds of offenses: ",
   "pli-tv-pvr2.2:89.2": "when she is in the process of keeping it for herself, then for the effort there is an offense of wrong conduct; ",
   "pli-tv-pvr2.2:89.3": "when she has kept it for herself, she commits an offense entailing confession. ",
