--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.2_translation-en-brahmali.json
@@ -126,7 +126,7 @@
   "pli-tv-pvr2.2:35.3": "when standing beyond arm’s reach, she commits an offense of wrong conduct. ",
   "pli-tv-pvr2.2:36.1": "When asking for raw grain and then eating it, she commits two kinds of offenses: ",
   "pli-tv-pvr2.2:36.2": "when she receives with the intention to eat, she commits an offense of wrong conduct; ",
-  "pli-tv-pvr2.2:36.3": "for every mouthful, she commits an offense entailing confession. ",
+  "pli-tv-pvr2.2:36.3": "for every mouthful swallowed, she commits an offense entailing confession. ",
   "pli-tv-pvr2.2:37.1": "When disposing of feces, urine, trash, or food scraps over a wall or over an encircling wall, she commits two kinds of offenses: ",
   "pli-tv-pvr2.2:37.2": "when she is in the process of discarding it, then for the effort there is an offense of wrong conduct; ",
   "pli-tv-pvr2.2:37.3": "when she has discarded it, she commits an offense entailing confession. ",
