--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr1.2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr1.2_translation-en-brahmali.json
@@ -264,7 +264,7 @@
   "pli-tv-pvr1.2:82.3": "when one has boarded, one commits an offense entailing confession. ",
   "pli-tv-pvr1.2:83.1": "When eating almsfood knowing that a nun had it prepared, one commits two kinds of offenses: ",
   "pli-tv-pvr1.2:83.2": "when one receives with the intention to eat, one commits an offense of wrong conduct; ",
-  "pli-tv-pvr1.2:83.3": "for every mouthful, one commits an offense entailing confession. ",
+  "pli-tv-pvr1.2:83.3": "for every mouthful swallowed, one commits an offense entailing confession. ",
   "pli-tv-pvr1.2:84.1": "When sitting in private alone with a nun, one commits two kinds of offenses: ",
   "pli-tv-pvr1.2:84.2": "when one is in the process of sitting down, then for the effort there is an offense of wrong conduct; ",
   "pli-tv-pvr1.2:84.3": "when one is seated, one commits an offense entailing confession. ",
