--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.2_translation-en-brahmali.json
@@ -48,7 +48,7 @@
   "pli-tv-pvr2.2:10.4": "if she receives water or a tooth cleaner, she commits an offense of wrong conduct. ",
   "pli-tv-pvr2.2:11.1": "When urging a nun on, saying, “Venerable, what can this man do to you, whether he has lust or not, if you’re without? Go on, Venerable, receive it with your own hands and then eat whatever fresh or cooked food he gives to you,” she commits three kinds of offenses: ",
   "pli-tv-pvr2.2:11.2": "when, because of her statement, the other nun receives it with the intention of eating it, she commits an offense of wrong conduct; ",
-  "pli-tv-pvr2.2:11.3": "for every mouthful, she commits a serious offense; ",
+  "pli-tv-pvr2.2:11.3": "for every mouthful swallowed, she commits a serious offense; ",
   "pli-tv-pvr2.2:11.4": "when the meal is finished, she commits an offense entailing suspension. ",
   "pli-tv-pvr2.2:12.1": "When an angry nun does not stop when pressed for the third time, she commits three kinds of offenses: ",
   "pli-tv-pvr2.2:12.2": "after the motion, she commits an offense of wrong conduct; ",
