--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr1.2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr1.2_translation-en-brahmali.json
@@ -336,7 +336,7 @@
   "pli-tv-pvr1.2:108.0": "5.6 The subchapter on drinking alcohol ",
   "pli-tv-pvr1.2:108.1": "When drinking an alcoholic drink, one commits two kinds of offenses: ",
   "pli-tv-pvr1.2:108.2": "when one receives with the intention to drink, one commits an offense of wrong conduct; ",
-  "pli-tv-pvr1.2:108.3": "for every mouthful, one commits an offense entailing confession. ",
+  "pli-tv-pvr1.2:108.3": "for every mouthful swallowed, one commits an offense entailing confession. ",
   "pli-tv-pvr1.2:109.1": "When one makes a monk laugh by tickling, one commits two kinds of offenses: ",
   "pli-tv-pvr1.2:109.2": "when one is in the process of making him laugh, then for the effort there is an offense of wrong conduct; ",
   "pli-tv-pvr1.2:109.3": "when one has made him laugh, one commits an offense entailing confession. ",
