--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr1.2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr1.2_translation-en-brahmali.json
@@ -296,7 +296,7 @@
   "pli-tv-pvr1.2:93.3": "for every mouthful, one commits an offense entailing confession. ",
   "pli-tv-pvr1.2:94.1": "When eating fine foods that one has requested for oneself, one commits two kinds of offenses: ",
   "pli-tv-pvr1.2:94.2": "when one receives with the intention to eat, one commits an offense of wrong conduct; ",
-  "pli-tv-pvr1.2:94.3": "for every mouthful, one commits an offense entailing confession. ",
+  "pli-tv-pvr1.2:94.3": "for every mouthful swallowed, one commits an offense entailing confession. ",
   "pli-tv-pvr1.2:95.1": "When eating food that has not been given, one commits two kinds of offenses: ",
   "pli-tv-pvr1.2:95.2": "when one receives with the intention to eat, one commits an offense of wrong conduct; ",
   "pli-tv-pvr1.2:95.3": "for every mouthful swallowed, one commits an offense entailing confession. ",
