--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr1.2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr1.2_translation-en-brahmali.json
@@ -293,7 +293,7 @@
   "pli-tv-pvr1.2:92.3": "for every mouthful, one commits an offense entailing confession. ",
   "pli-tv-pvr1.2:93.1": "When storing and then eating fresh or cooked food, one commits two kinds of offenses: ",
   "pli-tv-pvr1.2:93.2": "when one receives with the intention to eat, one commits an offense of wrong conduct; ",
-  "pli-tv-pvr1.2:93.3": "for every mouthful, one commits an offense entailing confession. ",
+  "pli-tv-pvr1.2:93.3": "for every mouthful swallowed, one commits an offense entailing confession. ",
   "pli-tv-pvr1.2:94.1": "When eating fine foods that one has requested for oneself, one commits two kinds of offenses: ",
   "pli-tv-pvr1.2:94.2": "when one receives with the intention to eat, one commits an offense of wrong conduct; ",
   "pli-tv-pvr1.2:94.3": "for every mouthful swallowed, one commits an offense entailing confession. ",
