--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr1.2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr1.2_translation-en-brahmali.json
@@ -284,7 +284,7 @@
   "pli-tv-pvr1.2:89.3": "when one has finished taking, one commits an offense entailing confession. ",
   "pli-tv-pvr1.2:90.1": "When one has finished one’s meal and refused an invitation to eat more, and then eats fresh or cooked food that is not left over, one commits two kinds of offenses: ",
   "pli-tv-pvr1.2:90.2": "when one receives with the intention to eat, one commits an offense of wrong conduct; ",
-  "pli-tv-pvr1.2:90.3": "for every mouthful, one commits an offense entailing confession. ",
+  "pli-tv-pvr1.2:90.3": "for every mouthful swallowed, one commits an offense entailing confession. ",
   "pli-tv-pvr1.2:91.1": "When inviting a monk who has finished his meal and refused an invitation to eat more to eat fresh or cooked food that is not left over, one commits two kinds of offenses: ",
   "pli-tv-pvr1.2:91.2": "when, because of what one says, the other receives with the intention to eat, one commits an offense of wrong conduct; ",
   "pli-tv-pvr1.2:91.3": "when the meal is finished, one commits an offense entailing confession. ",
