--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr1.2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr1.2_translation-en-brahmali.json
@@ -278,7 +278,7 @@
   "pli-tv-pvr1.2:87.3": "for every mouthful, one commits an offense entailing confession. ",
   "pli-tv-pvr1.2:88.1": "When eating one meal before another, one commits two kinds of offenses: ",
   "pli-tv-pvr1.2:88.2": "when one receives with the intention to eat, one commits an offense of wrong conduct; ",
-  "pli-tv-pvr1.2:88.3": "for every mouthful, one commits an offense entailing confession. ",
+  "pli-tv-pvr1.2:88.3": "for every mouthful swallowed, one commits an offense entailing confession. ",
   "pli-tv-pvr1.2:89.1": "When accepting more than two or three bowlfuls of pastries, one commits two kinds of offenses: ",
   "pli-tv-pvr1.2:89.2": "when one is in the process of taking, then for the effort there is an offense of wrong conduct; ",
   "pli-tv-pvr1.2:89.3": "when one has finished taking, one commits an offense entailing confession. ",
