--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr1.2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr1.2_translation-en-brahmali.json
@@ -272,7 +272,7 @@
   "pli-tv-pvr1.2:86.0": "5.4 The subchapter on eating ",
   "pli-tv-pvr1.2:86.1": "When eating alms too often at a public guesthouse, one commits two kinds of offenses: ",
   "pli-tv-pvr1.2:86.2": "when one receives with the intention to eat, one commits an offense of wrong conduct; ",
-  "pli-tv-pvr1.2:86.3": "for every mouthful, one commits an offense entailing confession. ",
+  "pli-tv-pvr1.2:86.3": "for every mouthful swallowed, one commits an offense entailing confession. ",
   "pli-tv-pvr1.2:87.1": "When eating in a group, one commits two kinds of offenses: ",
   "pli-tv-pvr1.2:87.2": "when one receives with the intention to eat, one commits an offense of wrong conduct; ",
   "pli-tv-pvr1.2:87.3": "for every mouthful swallowed, one commits an offense entailing confession. ",
