--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -14,7 +14,7 @@
   "mn122:2.9": "Da kam der Buddha am späten Nachmittag aus seiner Klausur und ging zur Wohnung des Sakyers Ghaṭa. Er setzte sich auf den ausgebreiteten Sitz ",
   "mn122:2.10": "und sagte zum Ehrwürdigen Ānanda: ",
   "mn122:2.11": "„In der Wohnung des Sakyers Kāḷakhemaka sind viele Ruheplätze ausgebreitet worden; ",
-  "mn122:2.12": "leben hier viele Mönche und Nonnen?“ ",
+  "mn122:2.12": "leben dort viele Mönche und Nonnen?“ ",
   "mn122:2.14": "„Richtig, Herr, hier leben viele Mönche und Nonnen. ",
   "mn122:2.15": "Gerade ist die Zeit zum Robennähen.“ ",
   "mn122:3.1": "„Ānanda, ein Mönch, der Gesellschaft und Gruppen genießt, der sie liebt und daran hängt, sie zu genießen, leuchtet nicht. ",
