--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -390,5 +390,5 @@
   "mn82:42.51": "Wie Obst vom Baum fällt, so fallen Menschen, ",
   "mn82:42.52": "jung und alt, wenn der Körper auseinanderbricht. ",
   "mn82:42.53": "Auch als ich das sah, zog ich fort, o König: ",
-  "mn82:42.54": "Das Asketenleben ist mit unfehlbarer Sicherheit besser.“ "
+  "mn82:42.54": "Das Asketenleben ist unfehlbar besser.“ "
 }
