--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -117,5 +117,6 @@
   "mn122:19.2": "Welchen Vorteil würde ein Schüler sehen, dass er es für wert hielte, sich dem Lehrer anzuschließen, selbst wenn der ihn wegschickt?“ ",
   "mn122:19.3": "„Unsere Lehren wurzeln im Buddha. Er leitet uns und ist unsere Zuflucht. Herr, es wäre gut, wenn der Buddha selbst erklären würde, was das bedeutet. Die Mönche und Nonnen werden zuhören und es behalten.“ ",
   "mn122:20.1": "„Ein Schüler soll es nicht für wert halten, sich um Aussagen, Mischungen aus Prosa und Dichtung oder um Gesprächen willen dem Lehrer anzuschließen. ",
-  "mn122:20.2": "Und warum nicht? "
+  "mn122:20.2": "Und warum nicht? ",
+  "mn122:20.3": "Weil ihr habe für lang Zeit die Lehren gelernt, hattet sie im Gedächtnis, habt sie durch Aufsagen gefestigt, sie mit dem Geist geprüft und gedanklich erfasst. "
 }
