--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -121,5 +121,6 @@
   "mn122:20.3": "Weil ihr für lange Zeit die Lehren gelernt habt, sie im Gedächtnis hattet, sie durch Aufsagen gefestigt, mit dem Geist geprüft und gedanklich erfasst habt. ",
   "mn122:20.4": "Aber ein Schüler soll es für wert halten, sich um Gesprächen über Selbstüberwindung willen, die helfen, das Herz zu öffnen und die einzig zu Ernüchterung, Schwinden der Leidenschaft, Aufhören, Frieden, Einsicht, Erwachen und Erlöschen führen,  dem Lehrer anzuschließen, selbst wenn der ihn wegschickt: nämlich um Gesprächen über Genügsamkeit willen, Gesprächen über Zufriedenheit, Abgeschiedenheit, Sichfernhalten, das Aufrütteln der Energie, sittliches Verhalten, Versenkung, Weisheit, Freiheit und das Erkennen und Sehen der Freiheit. ",
   "mn122:21.1": "Da das so ist, Ānanda, gibt es eine Gefahr für den Lehrer, eine Gefahr für den Schüler und eine Gefahr für den, der das geistliche Leben führt. ",
-  "mn122:22.1": "Und wie gibt es eine Gefahr für den Lehrer? "
+  "mn122:22.1": "Und wie gibt es eine Gefahr für den Lehrer? ",
+  "mn122:22.2": "Da sucht ein Lehrer einen abgelegenen Platz auf: eine Wildnis, den Fuß eines Baumes, einen Hügel, eine Schlucht, eine Berghöhle, ein Leichenfeld, einen Wald, das Freie, einen Strohhaufen. "
 }
