--- a/translation/en/sujato/sutta/mn/mn50_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn50_translation-en-sujato.json
@@ -59,7 +59,7 @@
   "mn50:10.3": "Some cowherds, shepherds, farmers, and passers-by saw him sitting there ",
   "mn50:10.4": "and said, ",
   "mn50:10.5": "‘Oh, how incredible, how amazing! ",
-  "mn50:10.6": "This ascetic passed away while sitting. ",
+  "mn50:10.6": "This ascetic passed away while seated. ",
   "mn50:10.7": "We should cremate him.’ ",
   "mn50:10.8": "They collected grass, wood, and cow-dung, heaped it all on Sañjīva’s body, set it on fire, and left. ",
   "mn50:11.1": "Then, when the night had passed, Sañjīva emerged from that attainment, shook out his robes, and, since it was morning, he robed up and entered the village for alms. ",
