--- a/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
@@ -38,7 +38,7 @@
   "mn81:6.13": "For a third time, Jotipāla said to him, ",
   "mn81:6.14": "‘Enough, dear Ghaṭīkāra. ",
   "mn81:6.15": "What’s the use of seeing that shaveling, that fake ascetic?’ ",
-  "mn81:6.16": "‘Well then, dear Jotipāla, let’s take some cleanser and go to the river to bathe.’ ",
+  "mn81:6.16": "‘Well then, dear Jotipāla, let’s take some bath cleanser and go to the river to bathe.’ ",
   "mn81:6.17": "‘Yes, dear,’ replied Jotipāla. ",
   "mn81:6.18": "So that’s what they did. ",
   "mn81:7.1": "Then Ghaṭīkāra addressed Jotipāla, ",
