--- a/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
@@ -60,7 +60,7 @@
   "mn81:8.2": "‘Dear Jotipāla, the Buddha Kassapa’s monastery is not far away. ",
   "mn81:8.3": "Let’s go to see the Blessed One Kassapa, the perfected one, the fully awakened Buddha. ",
   "mn81:8.4": "For I deem it holy to see that Blessed One.’ ",
-  "mn81:8.5": "So Jotipāla undid his belt and said to Ghaṭīkāra, ",
+  "mn81:8.5": "So Jotipāla undid his skirt-hem and said to Ghaṭīkāra, ",
   "mn81:8.6": "‘Enough, dear Ghaṭīkāra. ",
   "mn81:8.7": "What’s the use of seeing that shaveling, that fake ascetic?’ ",
   "mn81:9.1": "Then Ghaṭīkāra grabbed Jotipāla by the hair of his freshly-washed head and said, ",
