--- a/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
@@ -11,7 +11,7 @@
   "mn81:2.6": "“What is the cause, what is the reason why the Buddha smiled? ",
   "mn81:2.7": "Realized Ones do not smile for no reason.” ",
   "mn81:3.1": "“Once upon a time, Ānanda, there was a market town in this spot named Vehaliṅga. It was successful and prosperous, populous, full of people. ",
-  "mn81:3.2": "And Kassapa, a blessed one, a perfected one, a fully awakened Buddha, lived supported by Vebhaliṅga. ",
+  "mn81:3.2": "And Kassapa, a blessed one, a perfected one, a fully awakened Buddha, lived supported by Vehaliṅga. ",
   "mn81:3.3": "It was here, in fact, that he had his monastery, ",
   "mn81:3.4": "where he advised the mendicant Saṅgha while seated.” ",
   "mn81:4.1": "Then Ānanda spread out his outer robe folded in four and said to the Buddha, ",
