--- a/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
@@ -90,7 +90,7 @@
   "mn81:12.2": "‘Sir, this is my dear friend Jotipāla, a brahmin student. ",
   "mn81:12.3": "Please give him the going forth.’ ",
   "mn81:12.4": "And Jotipāla the brahmin student received the going forth, the ordination in the Buddha’s presence. ",
-  "mn81:13.1": "Not long after Jotipāla’s ordination, a fortnight later, the Buddha Kassapa—having stayed in Vebhaliṅga as long as he pleased—set out for Varanasi. ",
+  "mn81:13.1": "Not long after Jotipāla’s ordination, a fortnight later, the Buddha Kassapa—having stayed in Vehaliṅga as long as he pleased—set out for Varanasi. ",
   "mn81:13.2": "Traveling stage by stage, he arrived at Varanasi, ",
   "mn81:13.3": "where he stayed near Varanasi, in the deer park at Isipatana. ",
   "mn81:14.1": "King Kikī of Kāsi heard that he had arrived. ",
