--- a/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
@@ -120,7 +120,7 @@
   "mn81:17.15": "Then King Kikī, thinking, ‘The Buddha does not accept my invitation to reside for the rains in Varanasi,’ became sad and upset. ",
   "mn81:17.16": "Then King Kikī said to the Buddha Kassapa, ",
   "mn81:17.17": "‘Sir, do you have another supporter better than me?’ ",
-  "mn81:18.1": "‘Great king, there is a market town named Vebhaliṅga, ",
+  "mn81:18.1": "‘Great king, there is a market town named Vehaliṅga, ",
   "mn81:18.2": "where there’s a potter named Ghaṭīkāra. ",
   "mn81:18.3": "He is my chief supporter. ",
   "mn81:18.4": "Now, great king, you thought, “The Buddha does not accept my invitation to reside for the rains in Varanasi,” and you became sad and upset. ",
