--- a/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
@@ -20,7 +20,7 @@
   "mn81:4.4": "The Buddha sat on the seat spread out. ",
   "mn81:4.5": "When he was seated he said to Venerable Ānanda: ",
   "mn81:5.1": "“Once upon a time, Ānanda, there was a market town in this spot named Vebhaliṅga. It was successful and prosperous, populous, full of people. ",
-  "mn81:5.2": "And Kassapa, a blessed one, a perfected one, a fully awakened Buddha, lived supported by Vehaliṅga. ",
+  "mn81:5.2": "And Kassapa, a blessed one, a perfected one, a fully awakened Buddha, lived supported by Vebhaliṅga. ",
   "mn81:5.3": "It was here, in fact, that he had his monastery, ",
   "mn81:5.4": "where he advised the mendicant Saṅgha while seated. ",
   "mn81:6.1": "The Buddha Kassapa had as chief supporter in Vehaliṅga a potter named Ghaṭīkāra. ",
