--- a/translation/de/sabbamitta/sutta/an/an5/an5.192_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.192_translation-de-sabbamitta.json
@@ -75,7 +75,7 @@
   "an5.192:12.6": "Soweit der Rahmen der alten Brahmanen reicht, überschreitet er die Grenze. ",
   "an5.192:12.7": "Darum nennt man ihn einen Brahmanen, der die Grenze überschreitet. ",
   "an5.192:12.8": "So überschreitet ein Brahmane die Grenze. ",
-  "an5.192:13.1": "Und wie ist ein Brahmane ein ausgestoßener Brahmane? ",
+  "an5.192:13.1": "Und wie ist ein Brahmane ein brahmanischer Leichenbeseitiger? ",
   "an5.192:13.2": "Da ist ein Brahmane von guter Geburt auf mütterlicher und väterlicher Seite, er kommt aus einem reinen Schoß bis zur siebten väterlichen Generation zurück, mit unwiderlegbarem und einwandfreiem Stammbaum. ",
   "an5.192:13.4": "Achtundvierzig Jahre lang führt er das jungfräuliche geistliche Leben und lernt die Hymnen. ",
   "an5.192:13.5": "Dann sucht er ein Entgelt für seinen Lehrer sowohl auf rechtmäßige als auch auf unrechtmäßige Weise. ",
