--- a/translation/de/sabbamitta/sutta/an/an5/an5.192_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.192_translation-de-sabbamitta.json
@@ -90,7 +90,7 @@
   "an5.192:14.8": "‚Wie ein Feuer, das reine und unreine Stoffe gleichermaßen verbrennt, ohne dass es davon verunreinigt wird: ",
   "an5.192:14.9": "Ebenso, guter Mann, wird ein Brahmane nicht verunreinigt, wenn er mit einer beliebigen Arbeit seinen Unterhalt verdient.‘ ",
   "an5.192:14.10": "Ein Brahmane wird ein brahmanischer Leichenbeseitiger genannt, weil er mit einer beliebigen Arbeit seinen Unterhalt verdient. ",
-  "an5.192:14.11": "So ist ein Brahmane ein ausgestoßener Brahmane. ",
+  "an5.192:14.11": "So ist ein Brahmane ein brahmanischer Leichenbeseitiger. ",
   "an5.192:15.1": "Doṇa, die alten brahmanischen Seher waren Aṭṭhaka, Vāmaka, Vāmadeva, Vessāmitta, Yamadaggi, Aṅgīrasa, Bhāradvāja, Vāseṭṭha, Kassapa und Bhagu. Sie schufen und verbreiteten die Hymnen, deren Gesänge in alten Zeiten gesungen, verbreitet und zusammengestellt wurden. Bis heute werden sie von den Brahmanen gesungen und vorgetragen. Die Brahmanen tragen weiterhin vor, was vorgetragen wurde, sagen auf, was aufgesagt wurde, und lehren, was gelehrt wurde. ",
   "an5.192:15.2": "Diese Seher haben fünf Arten von Brahmanen beschrieben: ",
   "an5.192:15.3": "einen Brahmanen, der Brahmā gleicht, einen, der einem Gott gleicht, einen, der bis an die Grenze geht, einen, der die Grenze überschreitet, und der Fünfte ist der ausgestoßene Brahmane. ",
