--- a/translation/de/sabbamitta/sutta/an/an5/an5.192_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.192_translation-de-sabbamitta.json
@@ -93,7 +93,7 @@
   "an5.192:14.11": "So ist ein Brahmane ein brahmanischer Leichenbeseitiger. ",
   "an5.192:15.1": "Doṇa, die alten brahmanischen Seher waren Aṭṭhaka, Vāmaka, Vāmadeva, Vessāmitta, Yamadaggi, Aṅgīrasa, Bhāradvāja, Vāseṭṭha, Kassapa und Bhagu. Sie schufen und verbreiteten die Hymnen, deren Gesänge in alten Zeiten gesungen, verbreitet und zusammengestellt wurden. Bis heute werden sie von den Brahmanen gesungen und vorgetragen. Die Brahmanen tragen weiterhin vor, was vorgetragen wurde, sagen auf, was aufgesagt wurde, und lehren, was gelehrt wurde. ",
   "an5.192:15.2": "Diese Seher haben fünf Arten von Brahmanen beschrieben: ",
-  "an5.192:15.3": "einen Brahmanen, der Brahmā gleicht, einen, der einem Gott gleicht, einen, der bis an die Grenze geht, einen, der die Grenze überschreitet, und der Fünfte ist der ausgestoßene Brahmane. ",
+  "an5.192:15.3": "einen Brahmanen, der Brahmā gleicht, einen, der einem Gott gleicht, einen, der bis an die Grenze geht, einen, der die Grenze überschreitet, und der Fünfte ist ein brahmanischer Leichenbeseitiger. ",
   "an5.192:15.4": "Welcher von diesen bist du, Doṇa?“ ",
   "an5.192:16.1": "„Wenn das so ist, Meister Gotama, dann kann ich nicht einmal als ein ausgestoßener Brahmane gelten. ",
   "an5.192:16.2": "Vortrefflich, Meister Gotama! … Von diesem Tag an soll Meister Gotama mich als Laienschüler in Erinnerung behalten, der für sein ganzes Leben Zuflucht genommen hat.“ "
