--- a/translation/de/sabbamitta/sutta/sn/sn47/sn47.19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn47/sn47.19_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "sn47.19:0.3": "Bei Sedaka ",
   "sn47.19:1.1": "Einmal hielt sich der Buddha im Land der Sumbher auf, bei dem Marktflecken der Sumbher mit Namen Sedaka. ",
   "sn47.19:1.2": "Da wandte sich der Buddha an die Mönche und Nonnen: ",
-  "sn47.19:1.3": "„Es war einmal, Mönche und Nonnen, ein Akrobat, der stellte seine Bambusstange auf und sagte zu seiner Schülerin Medakathālikā: ",
+  "sn47.19:1.3": "„Es war einmal, Mönche und Nonnen, ein Akrobat von den Leichenbeseitigern, der stellte seine Bambusstange auf und sagte zu seiner Schülerin Medakathālikā: ",
   "sn47.19:1.4": "‚Komm, liebe Medakathālikā, klettere an der Bambusstange hoch und stell dich auf meine Schultern.‘ ",
   "sn47.19:1.5": "‚Ja, Lehrer‘, antwortete sie. Sie kletterte an der Bambusstange hoch und stellte sich auf die Schultern ihres Lehrers. ",
   "sn47.19:1.6": "Dann sagte der Akrobat zu Medakathālikā: ",
