--- a/translation/de/sabbamitta/sutta/sn/sn47/sn47.19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn47/sn47.19_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "sn47.19:1.3": "„Es war einmal, Mönche und Nonnen, ein Akrobat von den Leichenbeseitigern, der stellte seine Bambusstange auf und sagte zu seiner Schülerin Medakathālikā: ",
   "sn47.19:1.4": "‚Komm, liebe Medakathālikā, klettere an der Bambusstange hoch und stell dich auf meine Schultern.‘ ",
   "sn47.19:1.5": "‚Ja, Lehrer‘, antwortete sie. Sie kletterte an der Bambusstange hoch und stellte sich auf die Schultern ihres Lehrers. ",
-  "sn47.19:1.6": "Dann sagte der Akrobat zu Medakathālikā: ",
+  "sn47.19:1.6": "Dann sagte der Akrobat von den Leichenbeseitigern zu Medakathālikā: ",
   "sn47.19:1.7": "‚Du passt auf mich auf, liebe Medakathālikā, und ich werde auf dich aufpassen. ",
   "sn47.19:1.8": "So werden wir unsere Kunst vorführen, indem wir uns gegenseitig beschützen und aufeinander aufpassen, wir werden so unser Entgelt einsammeln und sicher von der Bambusstange herabkommen.‘ ",
   "sn47.19:1.9": "Darauf entgegnete Medakathālikā ihrem Lehrer: ",
