--- a/translation/de/sabbamitta/sutta/kn/thig/thig16.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig16.1_translation-de-sabbamitta.json
@@ -248,7 +248,7 @@
   "thig16.1:61.4": "wie ein Wels am Angelhaken. ",
   "thig16.1:62.1": "Beherrsche dich inmitten von Sinnenfreuden! ",
   "thig16.1:62.2": "Du bist wie ein Hund, der angebunden ist: ",
-  "thig16.1:62.3": "So wie Ausgestoßene, wenn sie hungrig sind, einen Hund verschlingen, ",
+  "thig16.1:62.3": "So wie Leichenbeseitiger, wenn sie hungrig sind, einen Hund verschlingen, ",
   "thig16.1:62.4": "so werden die Sinnenfreuden dich verschlingen. ",
   "thig16.1:63.1": "Wenn du vor die Sinnenfreuden gespannt bist, ",
   "thig16.1:63.2": "wirst du endlosen Schmerz erleiden ",
