--- a/translation/de/sabbamitta/sutta/dn/dn2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn2_translation-de-sabbamitta.json
@@ -324,7 +324,7 @@
   "dn2:47.3": "Er unterlässt das Anlegen solcher Vorräte. ",
   "dn2:47.4": "Das ist Teil seiner Sittlichkeit. ",
   "dn2:48.1": "Es gibt manche Asketen und Brahmanen, die Speisen genießen, die aus Vertrauen gespendet wurden, und gleichzeitig noch den Besuch von Vorführungen betreiben: ",
-  "dn2:48.2": "nämlich Dinge wie Tanz, Gesang, Musik, Vorführungen und Geschichtenerzählen, Klatschen, Becken- und Paukenschlag, Schönheits-Festumzüge und stammeseigene Knochenwasch-Zeremonien, Kämpfe von Elefanten, Pferden, Büffeln, Stieren, Ziegen, Widdern, Hühnern und Wachteln, Stockkampf, Boxen und Ringen, Gefechte, Appelle der Streitkräfte, Schlachtordnungen und Manöverkritik. ",
+  "dn2:48.2": "nämlich Dinge wie Tanz, Gesang, Musik, Vorführungen und Geschichtenerzählen, Klatschen, Becken- und Paukenschlag, Schönheits-Festumzüge, Akrobatik und Knochenwasch-Zeremonien der Leichenbeseitiger, Kämpfe von Elefanten, Pferden, Büffeln, Stieren, Ziegen, Widdern, Hühnern und Wachteln, Stockkampf, Boxen und Ringen, Gefechte, Appelle der Streitkräfte, Schlachtordnungen und Manöverkritik. ",
   "dn2:48.3": "Er unterlässt den Besuch solcher Vorführungen. ",
   "dn2:48.4": "Das ist Teil seiner Sittlichkeit. ",
   "dn2:49.1": "Es gibt manche Asketen und Brahmanen, die Speisen genießen, die aus Vertrauen gespendet wurden, und gleichzeitig noch Glücksspiel betreiben, das nachlässig macht: ",
