--- a/translation/de/sabbamitta/sutta/an/an3/an3.34_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.34_translation-de-sabbamitta.json
@@ -5,7 +5,7 @@
   "an3.34:1.1": "„Mönche und Nonnen, es gibt drei Quellen, aus denen Taten hervorgehen. ",
   "an3.34:1.2": "Welche drei? ",
   "an3.34:1.3": "Gier, Hass und Täuschung sind Quellen, aus denen Taten hervorgehen. ",
-  "an3.34:2.1": "Jede Tat, die aus Gier hervorgeht, aus Gier geboren wird, die dort entspringt und ihren Ursprung hat, kommt zur Reife, wo immer diese neue Lebensform geboren wird. ",
+  "an3.34:2.1": "Jede Tat, die aus Gier hervorgeht, aus Gier geboren wird, die dort entspringt und ihren Ursprung hat, kommt zur Reife, wo immer diese neue Verkörperung geboren wird. ",
   "an3.34:2.2": "Und wo diese Tat zur Reife kommt, dort wird ihre Folge erfahren: sei es in diesem Leben, im nächsten Leben oder zu einer späteren Zeit. ",
   "an3.34:3.1": "Jede Tat, die aus Hass hervorgeht, aus Hass geboren wird, die dort entspringt und ihren Ursprung hat, kommt zur Reife, wo immer diese neue Lebensform geboren wird. ",
   "an3.34:3.2": "Und wo diese Tat zur Reife kommt, dort wird ihre Folge erfahren: sei es in diesem Leben, im nächsten Leben oder zu einer späteren Zeit. ",
