--- a/translation/de/sabbamitta/sutta/an/an4/an4.15_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.15_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "an4.15:0.3": "Gelten ",
   "an4.15:1.1": "„Mönche und Nonnen, diese vier gelten als die Vordersten. ",
   "an4.15:1.2": "Welche vier? ",
-  "an4.15:1.3": "Der Vorderste bei der Größe der Lebensform ",
+  "an4.15:1.3": "Der Vorderste bei der Größe der Verkörperung ",
   "an4.15:1.4": "ist Rāhu der Titanenfürst. ",
   "an4.15:1.5": "Der Vorderste unter den Genussmenschen ",
   "an4.15:1.6": "ist König Mandhātā. ",
