--- a/translation/de/sabbamitta/sutta/an/an10/an10.99_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.99_translation-de-sabbamitta.json
@@ -17,7 +17,7 @@
   "an10.99:3.5": "Wenn ich gebadet und getrunken habe, will ich aus dem Wasser steigen und gehen, wohin ich will.‘ ",
   "an10.99:3.6": "Und so täte er es. ",
   "an10.99:3.8": "Und warum? ",
-  "an10.99:3.9": "Weil seine große Lebensform in der Tiefe Halt findet. ",
+  "an10.99:3.9": "Weil seine große Verkörperung in der Tiefe Halt findet. ",
   "an10.99:4.1": "Dann käme ein Kaninchen oder eine Katze. ",
   "an10.99:4.2": "Das Tier dächte: ",
   "an10.99:4.3": "‚Welcher Unterschied besteht zwischen mir und einem Elefantenbullen? ",
