--- a/translation/de/sabbamitta/sutta/an/an8/an8.19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.19_translation-de-sabbamitta.json
@@ -24,7 +24,7 @@
   "an8.19:7.3": "Das ist das sechste unglaubliche und erstaunliche Ding, dessentwegen die Titanen das Weltmeer lieben. ",
   "an8.19:8.1": "Weiter ist das Weltmeer voll vielfältiger Schätze wie Perlen, Edelsteinen, Beryll, Meeresschneckenhäusern, Bergkristall, Korallen, Silber, Gold, Rubinen und Smaragden. ",
   "an8.19:8.3": "Das ist das siebte unglaubliche und erstaunliche Ding, dessentwegen die Titanen das Weltmeer lieben. ",
-  "an8.19:9.1": "Weiter leben im Weltmeer große Geschöpfe wie Leviathane, Leviathan-Fresser, Leviathan-Fresser-Fresser, Titanen, Drachen und Zentauren. Im Weltmeer gibt es Lebensformen mit einer Länge von hundert Meilen oder gar zweihundert, dreihundert, vierhundert oder fünfhundert Meilen. ",
+  "an8.19:9.1": "Weiter leben im Weltmeer große Geschöpfe wie Leviathane, Leviathan-Fresser, Leviathan-Fresser-Fresser, Titanen, Drachen und Zentauren. Im Weltmeer gibt es Verkörperungen mit einer Länge von hundert Meilen oder gar zweihundert, dreihundert, vierhundert oder fünfhundert Meilen. ",
   "an8.19:9.3": "Das ist das achte unglaubliche und erstaunliche Ding, dessentwegen die Titanen das Weltmeer lieben. ",
   "an8.19:9.4": "Da sie diese acht unglaublichen und erstaunlichen Dinge sehen, lieben die Titanen das Weltmeer. ",
   "an8.19:10.1": "Nun, Herr, lieben die Mönche und Nonnen diese Lehre und Schulung?“ ",
